On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   .gitignore
	modified:   _config.yml
	new file:   _includes/footer.html
	modified:   _layouts/default.html
	new file:   _layouts/post.html
	new file:   _posts/2025-01-10-cuidados-acceso-vascular.md
	new file:   _posts/2025-01-28-manejo-sed-tratamiento.md
	modified:   _posts/2025-02-15-alimentacion-hemodialisis.md
	modified:   assets/css/styles.css
	new file:   assets/js/faq.js
	modified:   assets/js/script.js
	modified:   colegas.html
	new file:   gemfile.rb
	modified:   index.html
	modified:   pacientes.html
	modified:   personal.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,5 +18,9 @@
     {% include footer.html %}
 
     <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
+    
+    {% if page.include_faq_script %}
+    <script src="{{ '/assets/js/faq.js' | relative_url }}"></script>
+    {% endif %}
 </body>
 </html>
