Fix typo in header description

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="logo">
         <h1>Dr. Fabio Cotes</h1>
-        <p>Médico y Cirujano, Hemodiálista</p>
+        <p>Médico y Cirujano, Hemodialista</p>
     </div>
     <nav>
         <ul>
