On branch main  Your branch is behind 'origin/main' by 1 commit, and can be fast-forwarded.    (use "git pull" to update your local branch)
 Changes to be committed:
	modified:   _layouts/default.html
	new file:   assets/js/eventos-scn.js
	modified:   colegas.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,5 +23,7 @@
     {% if page.include_faq_script %}
     <script src="{{ '/assets/js/faq.js' | relative_url }}"></script>
     {% endif %}
+
+    <script src="{{ '/assets/js/eventos-scn.js' | relative_url }}"></script>
 </body>
 </html>
